<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/style_background">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/congrats"
            android:layout_width="250dp"
            android:layout_height="230dp"
            app:lottie_rawRes="@raw/lottie_animation_broken_heart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/congrats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/attempsIsOver"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:fontFamily="@font/pre_hear_regular"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/correctAnswerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/wrongAnswerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/correctAnswerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoreHeart"
                app:layout_constraintTop_toBottomOf="@id/completed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxWidth="330dp"
                android:gravity="center"
                app:fontFamily="@font/pre_hear_regular"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wrongAnswerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exit"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:background="@drawable/style_btn"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/image_exit"
                android:padding="12dp"
                android:text="@string/exit"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/watchBtn"
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:background="@drawable/style_btn"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/madimi"
                android:textSize="14sp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:drawableStart="@drawable/image_watch_ads"
                android:text="@string/watchAd"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>