<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bookLayout"
    app:cardCornerRadius="16dp"
    android:elevation="2dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_item_menu"
        android:layout_margin="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/image_camera_not_allowed" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/karla_light"
                android:maxWidth="210dp"
                android:text="@string/exampleTest"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/karla"
                android:maxWidth="210dp"
                android:text="@string/bookTitle"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bookSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/karla"
                android:maxWidth="210dp"
                android:text="@string/bookSize"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bookRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/karla"
                android:maxWidth="210dp"
                android:text="@string/bookRelease"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/contentNewOld"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/image_new"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>